welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:10: error: ';' expected but 'if' found.
    } if (x == "L") {
      ^